--- a/baseres/src/main/res/values/strings.xml
+++ b/baseres/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
 
     <string name="app_loading">请稍后&#8230;</string>
     <string name="app_empty">暂无数据</string>
+    <string name="app_sure">确定</string>
+    <string name="app_cancel">取消</string>
 </resources>
