--- a/baseres/src/main/res/values/strings.xml
+++ b/baseres/src/main/res/values/strings.xml
@@ -5,4 +5,10 @@
     <string name="app_empty">暂无数据</string>
     <string name="app_sure">确定</string>
     <string name="app_cancel">取消</string>
+    <string name="app_login_title">登录账号</string>
+    <string name="app_login_account">账号</string>
+    <string name="app_login_password">密码</string>
+    <string name="app_login_submit">登录</string>
+    <string name="app_login_forgot_password">忘记密码?</string>
+    <string name="app_login_register">注册账号</string>
 </resources>
