--- a/baseres/src/main/res/values/strings.xml
+++ b/baseres/src/main/res/values/strings.xml
@@ -11,4 +11,7 @@
     <string name="app_login_submit">登录</string>
     <string name="app_login_forgot_password">忘记密码?</string>
     <string name="app_login_register">注册账号</string>
+    <string name="app_share_text">分享</string>
+    <string name="app_collect_text">收藏</string>
+    <string name="app_open_brower_system_text">系统浏览器打开</string>
 </resources>
